azure/socket-deployment-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket-poc
  template:
    metadata:
      labels:
        app: socket-poc
    spec:
      containers:
        - name: socket-poc
          image: muratacr71.azurecr.io/socket:8081
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: socket-poc
spec:
  type: ClusterIP
  ports:
    - port: 8081
  selector:
    app: socket-poc
